Made some UI changes

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <div id="app">
+      <div class="header">
+        <h2>Welcome to HelpCodeitout - your personal code companion</h2>
+      </div>
+      
       <div id="chat_container"></div>
 
       <form>
