Add backend server endpoint and update title

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app">
       <div class="header">
-        <h2>Welcome to HelpCodeitout - your personal code companion</h2>
+        <h2>Welcome to Codex - your AI</h2>
       </div>
       
       <div id="chat_container"></div>
