--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app">
       <div class="header">
-        <h2>Welcome to <u>Codex</u> - your AI</h2>
+        <h2>Welcome to Codex - your AI</h2>👋
       </div>
       
       <div id="chat_container"></div>
