--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,8 @@
   <body>
     <div id="app">
       <div class="header">
-        <h2>Welcome to Codex - your <span class="badge badge-pill badge-primary">AI</span></h2>👋
-      </div>
+        <h2>Welcome to Codex - your </h2>
+      </div><span style="display: inline;" class="badge badge-pill badge-primary">AI</span>👋
       
       <div id="chat_container"></div>
 
