--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="app">
       <div class="header">
-        <h2>Welcome to Codex - your<span style="display: inline;" class="badge badge-pill badge-primary">AI</span>👋 </h2>
+        <h2>Welcome to Codex - your AI</h2> 👋 
       </div>
       
       <div id="chat_container"></div>
