--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codex - Your AI</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
     <div id="app">
-      <div class="header">
-        <h2>Welcome to Codex - your AI</h2>
-      </div>
+      <header>
+        <h2>Welcome to Codex - your AI 👋</h2>
+      </header>
       
       <div id="chat_container"></div>
 
