Made UI changes

--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div id="app">
-      <header>
+      <div class="header">
         <h2>Welcome to Codex - your AI 👋</h2>
-      </header>
+      </div>
       
       <div id="chat_container"></div>
 
