--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="header">
+      <div>
         <h2>Welcome to Codex - your AI 👋</h2>
       </div>
       
