changed name of the app

--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codex - Your AI</title>
+    <title>CodePal</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="app">
       <div>
-        <h2>Welcome to Codex - your AI 👋</h2>
+        <h2>Welcome to CodePal - your AI buddy 👋</h2>
       </div>
       
       <div id="chat_container"></div>
