Made final changes

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows="1" cols="1" placeholder="Ask codex..."></textarea>
+        <textarea name="prompt" rows="1" cols="1" placeholder="Ask Codepal..."></textarea>
         <button type="submit"><img src="assets/send.svg" alt="send" />
       </form>
       <footer>
