--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodePal</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="/_vercel/insights/script.js"></script>
+    
   </head>
   <body>
     <div id="app">
