--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,15 @@
     <title>CodePal</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="/_vercel/insights/script.js"></script>
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBR0LBJ7ER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZBR0LBJ7ER');
+</script>
   </head>
   <body>
     <div id="app">
